# compilers-lab-assignments

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/assignement1/: AlgIdentity.cpp  CMakeLists.txt  MultiInst.cpp  StrengthRed.cpp
test/: test_AlgIdentity.ll  test_MultiInst.ll  test_StrengthRed.ll
